--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");
+@import "../scss/global";
+
+// Define the font-family
+$font-family: "Montserrat", sans-serif;
 
 [x-cloak] {
     display: none;
@@ -10,4 +15,5 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: $font-family;
 }
