feat(MASTER): implemented a bunch of stuff

--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -7,9 +7,9 @@
 // Define the font-family
 $font-family: "Montserrat", sans-serif;
 
-[x-cloak] {
-    display: none;
-}
+// [x-cloak] {
+//     display: none;
+// }
 
 * {
     box-sizing: border-box;
